# homeserver

./: .gitignore  CLAUDE.md  README.md  flake.nix  justfile
.zed/: tasks.json
hosts/mel/: backup.nix  configuration.nix  custom-services.nix  disko.nix  hardware-configuration.nix  index-page.nix  index.html  permanence.nix  wifi.nix
hosts/mel/nginx/: default.nix  index-page.nix
modules/: https.nix  mdns.nix  ssh-keys.nix  system.nix  tailscale.nix  tools.nix
modules/services/: blocky.nix  default.nix  fava.nix  homeassistant.nix  immich.nix  mediaserver.nix  minecraft.nix  monitoring.nix  paperless.nix  unbound.nix  zigbee2mqtt.nix
modules/services/dashboards/: blocky.json  minecraft.json  node-exporter.json  server-essentials.json  zigbee2mqtt.json
scripts/: pyproject.toml  rules.json
scripts/src/immich/: api.py
scripts/src/immich/cli/: auto_album.py  sync_favorites.py
secrets/: cloudflare-tunnel-certificate.age  cloudflare-tunnel-credentials.age  desec-token-env.age  duckdns-token-env.age  restic-env.age  restic-password.age  secrets.nix  ssh-github.age  ssh-github.pub  tailscale-authkey.age  wifi-password-env.age
